--- a/vagrant/environments/foss/config.yaml
+++ b/vagrant/environments/foss/config.yaml
@@ -3,7 +3,7 @@
 vm:
   memory: 1024                 # MB or RAM to assign
   cpu: 1                       # Number of vCPU to assign to the VM
-  box: centos7                 # Box used for the VM, from the box list in vagrant/boxes.yaml
+  box: ubuntu1604              # Box used for the VM, from the box list in vagrant/boxes.yaml
   puppet_apply: false          # Run puppet apply on the local control-repo during provisioning
   puppet_agent: true           # Run puppet agent during provisioning
   facter_external_facts: false # Create external facts in facts.d/$fact.txt. Note 1
@@ -71,9 +71,9 @@ nodes:
     count: 1
   - role: docker
     count: 1
-    box: ubuntu1604
   - role: jenkins
     count: 1
+    memory: 2048
     box: ubuntu1604
     forwarded_port:
       guest: 8080
@@ -83,7 +83,7 @@ nodes:
     count: 1
     box: centos6
   - role: ostest
-    hostname_base: ubuntu1604
+    hostname_base: centos7
     count: 1
-    box: ubuntu1604
+    box: centos7
 
