--- a/vagrant/environments/foss/config.yaml
+++ b/vagrant/environments/foss/config.yaml
@@ -6,8 +6,8 @@ vm:
   box: ubuntu1604              # Box used for the VM, from the box list in vagrant/boxes.yaml
   puppet_apply: false          # Run puppet apply on the local control-repo during provisioning
   puppet_agent: true           # Run puppet agent during provisioning
-  facter_external_facts: false # Create external facts in facts.d/$fact.txt. Note 1
-  facter_trusted_facts: true   # Create csr_attributes.yaml. Note 1
+  facter_external_facts: true  # Create external facts in facts.d/$fact.txt. Note 1
+  facter_trusted_facts: false  # Create csr_attributes.yaml. Note 1
 
 # Note 1: Some facts are used in default hiera.yaml and needed for
 # nodes classification. So it's better to set them, once.
@@ -31,8 +31,10 @@ puppet:
   application: default        # Setting for the application fact (may be used in hiera.yaml)
   master_vm:  puppet.foss.psick.io      # Name of the VM which play as Puppet server for the others
   master_fqdn: 'puppet.foss.psick.io'   # FQDN of the Puppet server to use with puppet agent
-  link_controlrepo: true      # Add a link for a Puppet environment to the development control-repo 
-  environment: host           # Puppet environment to link to local control-repo
+  link_controlrepo: false     # Add a link for a Puppet environment to the development control-repo 
+  environment: host           # Puppet environment to link to local control-repo and to use when Vagrant provisioning
+  r10k_install: true          # If to run r10k on Puppet server to deploy controlrepo
+  controlrepo: https://github.com/example42/psick.git # URL of the controlrepo to deploy via r10k on Puppet Server
 
 # Vagrant settings
 vagrant:
